# stimupy

./: .codespell.ignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  __init__.py  noxfile.py  postBuild  pyproject.toml  requirements.txt  setup.py  test.py  test_contrast_metrics.py  test_lightness.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-change.md  stimulus-request.md  stimulus-set-request.md
.github/workflows/: draft-pdf.yml  lint.yml  release.yml  test.yml  version.yml
binder/: postBuild  requirements.txt
binder/labconfig/: default_setting_overrides.json
contrast_measures/: __init__.py
demo/: basic_shapes.ipynb  benary_cross.ipynb  circular.ipynb  stimspace_checkerboard.ipynb  todorovic.ipynb  whites.ipynb
demo/illusions/: angular.ipynb  benary_cross.ipynb  checkerboard.ipynb  circular.ipynb  cornsweet.ipynb  frames.ipynb  grating.ipynb  grating_parameters.ipynb  hermann.ipynb  sbc.ipynb  todorovic.ipynb  wedding_cake.ipynb  whites.ipynb
demo/noises/: narrowband.ipynb  one_over_frequency.ipynb  pink.ipynb  white.ipynb
docs/: _config.yml  _toc.yml  index.md  requirements.txt
docs/_static/: compare_functions_pngs.py  generate_stimulus_images.py
docs/contributing/: cite.md  contribute.md  dev_environ.md  docs.md  set.md  sets.md  stimulus.md
docs/getting_started/: choose_variation.md  composition.md  create_stimulus.md  find_stimulus.md  first_stim.md  getting_started.md  illusion.md  import_sets.md  installation.md  organization.md  replicate.md  stimulus.md
docs/howtos/: color.md  compose.md  display.md  export.md  howtos.md  replicate.md  share.md  stimspace.md
docs/reference/: api.md  demos.md
docs/topic_guides/: composition.md  dimensions.md  gratings.md  organization.md  resolution.md  sets_papers.md  stimspaces.md  topic_guides.md  visual_noise.md  waves.md
docs/user_guide/: stimuli_parametrizations.md  user_guide.md
lightness/: README.rst  __init__.py  lightness.py  mondrian.py  mondrian.py~  random_circles.py
manuscript/: bibliography.bib  paper.md
src/: README.md  contrast_measures.py  contrast_metrics.py  lightness.py  utils.py
src/contrast_metrics/: README.md
src/illusions/: __init__.py  brightness_illusions.py  brightness_illusions2.py
src/lightness/: README.md  __init__.py  lightness.py
src/texture/: bricks.py
src/transparency/: README.md  checkerboard_factory.py
src/utils/: utils.py
stimuli/: Stimulus.py  __init__.py
stimuli/components/: __init__.py  angular.py  angulars.py  checkerboard.py  checkerboards.py  circular.py  circulars.py  components.py  components_.py  edges.py  frame.py  frames.py  gaussians.py  grating.py  gratings.py  lines.py  mondrians.py  overview.py  shapes.py
stimuli/contrast_metrics/: __init__.py  contrast_metrics.py
stimuli/illusions/: README.md  RHS2007_params.JSON  RHS2007_params.py  __init__.py  angular.py  angulars.py  benary_cross.py  benarys.py  brightness_illusions2.py  bullseye.py  checkerboard_contrast_contrast.py  checkerboard_sbc.py  checkerboards.py  circular.py  circulars.py  cornsweet.py  cornsweets.py  cube.py  cubes.py  delboeufs.py  delbouef.py  delbouefs.py  disc_and_ring.py  domijan2015.py  dungeon.py  dungeons.py  frames.py  grating.py  grating_.py  grating_induction.py  gratings.py  hermann.py  hermanns.py  koffka_adelson_auto_including_mask.py  koffka_conncected_auto_including_mask.py  koffka_ring.py  mondrians.py  mueller_lyer.py  mueller_lyers.py  murray.py  (+15 more)
stimuli/lightness/: lightness.py  overview.py
stimuli/noises/: __init__.py  binaries.py  narrowband.py  narrowbands.py  naturals.py  noises.py  one_over_frequency.py  overview.py  pink.py  utils.py  white.py  whites.py
stimuli/papers/: RHS2007.py  RHS2007_params.txt  __init__.py  carney1999.py  carney1999_data.csv  carney1999_noise.tif  domijan2015.py  murray2020.mat  murray2020.py  murray2020_script.py  white1981.py  white1981_.py  white1985.py
stimuli/papers_stimuli/: RHS2007.py  domijan2015.py
stimuli/texture/: README.md  mondrian.py
stimuli/transparency/: README.md  __init__.py  comments.md
stimuli/utils/: __init__.py  color_conversions.py  contrast_conversions.py  export.py  pad.py  plotting.py  resolution.py  sizes.py  utils.py
stimupy/: __init__.py  benarys.py  bullseyes.py  checkerboards.py  gabors.py  gratings.py  logos.py  pinwheels.py  plaids.py  rings.py  sbcs.py  todorovics.py  waves.py  wedding_cakes.py  whites.py
stimupy/_docs/: compare_functions_pngs.py  display_stimulus.py  generate_stimulus_images.py
stimupy/components/: __init__.py  angulars.py  checkerboards.py  circulars.py  edges.py  frames.py  gaussians.py  gratings.py  lines.py  mondrians.py  radials.py  shapes.py  texts.py  waves.py
stimupy/illusions/: __init__.py  angulars.py  benarys.py  checkerboards.py  circulars.py  cornsweets.py  cubes.py  delboeufs.py  dungeons.py  frames.py  gratings.py  hermanns.py  mondrians.py  mueller_lyers.py  ponzos.py  sbcs.py  todorovics.py  wedding_cakes.py  whites.py
stimupy/noises/: __init__.py  binaries.py  narrowbands.py  naturals.py  utils.py  whites.py
stimupy/papers/: RHS2007.py  __init__.py  betz2015.py  betz2015_data.csv  bindmann2004.py  carney1999.py  domijan2015.py  example.py  modelfest.py  modelfest_natural_scene.tif  murray2020.py  schmittwilken2024.py  schmittwilken2024_data.csv  white1981.py  white1985.py
stimupy/stimuli/: __init__.py  __main__.py  benarys.py  bullseyes.py  (+20 more)
tests/: demo_brightness_illusions2.py  demo_lightness.py  test_brightness_illusions.py  test_checkerboard.py  test_circular.py  test_contrast_metrics.py  test_gratings.py  test_lightness.py  test_logging.py  test_noises.py  test_overviews.py  test_pad.py  test_resolve.py  test_resolve_resolutions.py  test_rotation.py  test_rounding.py  test_valid_resolution.py  test_validate_resolution_components.py  test_validate_resolutions.py  test_waves.py
texture/: __init__.py  random_circles.py
transparency/: README.md  __init__.py  checkerboard.pov  checkerboard_factory.py  comments.md  texture_factory.py
utils/: utils.py
(+2340 files in other folders)
